Fix subheading spacing

--- a/css/style.scss
+++ b/css/style.scss
@@ -114,6 +114,8 @@ input {
 h2, summary {
 	font-size: 24px;
 	font-weight: bold;
+}
+h2, h3, h4, summary {
 	margin: 0 0 15px 0;
 }
 p {
